style/styling.css
/* ... */
@media (min-width: 1275px) and (max-width: 1487px) {

    * {
        scroll-padding-top: 4em;
    }
    
    h1 {
        font-size: clamp(1.8rem, 1.3792rem + 1.5842vw, 2rem);
    }

    /* title of project */
    h2 { 
        font-size: clamp(1.4rem, 0.5584rem + 3.1683vw, 1.8rem);
        text-align: left;
    }

    /* subtitle of project -> tech used*/
    h4 {
        font-size: clamp(1rem, 0.7370rem + 0.9901vw, 1.125rem);
        text-align: left;
    }

    .wrapper {
        padding: 10% 10%;
    }

    .wrapper .about p {
        font-size: clamp(1.188rem, 0.8774rem + 0.4679vw, 1.25rem);
    }

    .wrapper .about .main-about-image {
        inline-size: 16%;
    }

    .wrapper .skills .grid-container p{
        font-size: clamp(1.188rem, 0.8774rem + 0.4679vw, 1.25rem);
    }

    .wrapper .projects .flex-container .flex-item .main-project-image {
        inline-size: 35%;
        margin-bottom: 0.3rem;
        margin-top: 0.75rem;
    }

    .wrapper .projects .flex-container .project-description {
        font-size: clamp(1.188rem, 0.8774rem + 0.4679vw, 1.25rem);
        margin-bottom: 1rem;
    }
    
    .wrapper .projects .flex-container .flex-item .project-description a {
        font-size: clamp(1.188rem, 0.8774rem + 0.4679vw, 1.25rem);
    }

    .wrapper .projects .flex-container .flex-item .project-hyperlinks {
        display: flex;
        justify-content: flex-end;
    }

    .wrapper .projects .flex-container .flex-item .project-hyperlinks a {
        margin-bottom: 1rem;
    }

    .wrapper .projects .flex-container .flex-item .project-hyperlinks a p{
        font-size: clamp(1.188rem, 0.8774rem + 0.4679vw, 1.25rem);
        padding: 1rem;
    }

    .wrapper .projects .more-to-come {
        font-size: clamp(1.188rem, 0.8774rem + 0.4679vw, 1.25rem);
    }
    
    .quotation {
        width: 100%;
    }
    
    .quotation p {
        font-size: clamp(1.188rem, 0.8774rem + 0.4679vw, 1.25rem);
    }
    
    .quotation b {
        margin-top: 1.5rem;
        font-size: clamp(1.188rem, 0.8774rem + 0.4679vw, 1.25rem);
    }
    
    .footer {
        width: 80%;
        font-size: clamp(1rem, -0.2524rem + 1.8868vw, 1.25rem);
    }

} 

@media (min-width: 1062px) and (max-width: 1274px) {

    * {
        scroll-padding-top: 4em;
    }
    
    h1 {
        font-size: clamp(1.8rem, 1.3792rem + 1.5842vw, 2rem);
    }

    /* title of project */
    h2 { 
        font-size: clamp(1.4rem, 0.5584rem + 3.1683vw, 1.8rem);
        text-align: left;
    }

    /* subtitle of project -> tech used*/
    h4 {
        font-size: clamp(1rem, 0.7370rem + 0.9901vw, 1.125rem);
        text-align: left;
    }

    .wrapper {
        padding: 10% 10%;
    }

    .wrapper .about p {
        font-size: clamp(1.188rem, 0.8774rem + 0.4679vw, 1.25rem);
    }

    .wrapper .about .main-about-image {
        inline-size: 20%;
    }

    .wrapper .skills .grid-container p{
        font-size: clamp(1.188rem, 0.8774rem + 0.4679vw, 1.25rem);
    }

    .wrapper .projects .flex-container .flex-item .main-project-image {
        inline-size: 35%;
        margin-bottom: 0.3rem;
        margin-top: 0.75rem;
    }

    .wrapper .projects .flex-container .project-description {
        font-size: clamp(1.188rem, 0.8774rem + 0.4679vw, 1.25rem);
        margin-bottom: 1rem;
    }
    
    .wrapper .projects .flex-container .flex-item .project-description a {
        font-size: clamp(1.188rem, 0.8774rem + 0.4679vw, 1.25rem);
    }

    .wrapper .projects .flex-container .flex-item .project-hyperlinks {
        display: flex;
        justify-content: flex-end;
    }

    .wrapper .projects .flex-container .flex-item .project-hyperlinks a {
        margin-bottom: 1rem;
    }

    .wrapper .projects .flex-container .flex-item .project-hyperlinks a p{
        font-size: clamp(1.188rem, 0.8774rem + 0.4679vw, 1.25rem);
        padding: 1rem;
    }

    .wrapper .projects .more-to-come {
        font-size: clamp(1.188rem, 0.8774rem + 0.4679vw, 1.25rem);
    }
    
    .quotation {
        width: 100%;
    }
    
    .quotation p {
        font-size: clamp(1.188rem, 0.8774rem + 0.4679vw, 1.25rem);
    }
    
    .quotation b {
        margin-top: 1.5rem;
        font-size: clamp(1.188rem, 0.8774rem + 0.4679vw, 1.25rem);
    }
    
    .footer {
        width: 80%;
        font-size: clamp(1rem, -0.2524rem + 1.8868vw, 1.25rem);
    }

} 
/* ... */

